# falco-client

./: Cargo.toml  README.md  gen_crt.sh
client/: Cargo.toml  build.rs
client/src/: client.rs  config.rs  lib.rs
example/: Cargo.toml
example/src/: main.rs
protos/: outputs.proto
